# ratemate

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
ratemate/: __main__.py  config.py
